[package]
name = "nncp-rs"
version = "0.1.0"
authors = ["Blake Oliver <oliver22213@me.com>"]
edition = "2021"
resolver = "2"
description = "A rust port of the node to node copy set of tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nncp"
path = "src/main.rs"

[dependencies]
ed25519-compact = "2"
snow = "0.9"
base32 = "0.3"
crypto_box = "0.8.2"
blake2 = "0.10.6"
blake3 = "1.3"
bytes = "1.4"
balloon-hash = "0.3"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
rand = "0.8"
bincode = "1.3"
#build-info = {version = "0.0.30", features =["runtime"]}
clap = { version = "4.2.5", features = ["cargo", "env", "derive"] }
anyhow = "1.0"
thiserror = "1.0"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0.1"
serde_bytes = "0.11.9"
log = "0.4.0"
env_logger = "0.9.0"
emoji256 = "0.2.2"
fs2 = "0.4.3"
dialoguer = "0.10.4"
serde-xdr = "0.6.0"
hex = "0.4"
zstd = "0.13.3"

[build-dependencies]
#build-info-build = "0.0.30"
