[package]
name = "nncp_packet"
version = "0.1.0"
edition = "2021"
description = "Packet handling for NNCP (Node to Node Copy Protocol)"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-3.0"

[dependencies]
blake3 = "1.5.0"
bytes = "1.5.0"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
