[package]
name = "nncp_packet"
version = "0.1.0"
edition = "2021"
description = "Packet handling for NNCP (Node to Node Copy Protocol)"
authors = ["Your Name <your.email@example.com>"]
license = "GPL-3.0"

[dependencies]
blake3 = "1.5.0"
bytes = "1.5.0"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
bincode = "1.3.3"
blake2 = "0.10.6"
balloon-hash = "0.4.0"

[dev-dependencies]
rand = "0.8.5"

[[example]]
name = "merkle_hash"
path = "examples/merkle_hash.rs"

[[example]]
name = "eblob_example"
path = "examples/eblob_example.rs"
